# Concessionaria

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
carros/: admin.py  models.py  serializers.py  views.py
carros/migrations/: 0001_initial.py  0002_aluga_alugandouser_compra_vendendouser.py  0003_rename_aluga_vendendouser_compra.py
carros/views/: __init__.py  anos.py  carro.py  carrosAPIView.py  carrosClass.py  carrosGeneric.py  marcas.py  mecanicos.py  testesIniciais.py  tiposCarros.py
concessonaria/: asgi.py  settings.py  urls.py  wsgi.py
